--- a/locales/da.json
+++ b/locales/da.json
@@ -286,7 +286,8 @@
       "login": {
         "title": "Har du en konto?",
         "paragraph_html": "<a href=\"{{ link }}\" class=\"link underlined-link\">Log ind</a> for at betale hurtigere."
-      }
+      },
+      "new_estimated_total": "TODO"
     },
     "footer": {
       "payment": "Betalingsmetoder"
