--- a/locales/fi.json
+++ b/locales/fi.json
@@ -286,7 +286,8 @@
       "login": {
         "title": "Onko sinulla tili?",
         "paragraph_html": "<a href=\"{{ link }}\" class=\"link underlined-link\">Kirjaudu sisään</a>, jotta voit maksaa kassalla nopeammin."
-      }
+      },
+      "new_estimated_total": "TODO"
     },
     "footer": {
       "payment": "Maksutavat"
