--- a/locales/fr.json
+++ b/locales/fr.json
@@ -296,7 +296,8 @@
       "login": {
         "title": "Vous possédez un compte ?",
         "paragraph_html": "<a href=\"{{ link }}\" class=\"link underlined-link\">Connectez-vous</a> pour payer plus vite."
-      }
+      },
+      "new_estimated_total": "TODO"
     },
     "footer": {
       "payment": "Moyens de paiement"
