--- a/locales/hu.json
+++ b/locales/hu.json
@@ -286,7 +286,8 @@
       "login": {
         "title": "Már van fiókod?",
         "paragraph_html": "<a href=\"{{ link }}\" class=\"link underlined-link\">Jelentkezz be</a> a gyorsabb fizetéshez."
-      }
+      },
+      "new_estimated_total": "TODO"
     },
     "footer": {
       "payment": "Fizetési módok"
