--- a/locales/it.json
+++ b/locales/it.json
@@ -296,7 +296,8 @@
       "login": {
         "title": "Hai un account?",
         "paragraph_html": "<a href=\"{{ link }}\" class=\"link underlined-link\">Accedi</a> per un check-out più veloce."
-      }
+      },
+      "new_estimated_total": "TODO"
     },
     "footer": {
       "payment": "Metodi di pagamento"
