--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -286,7 +286,8 @@
       "login": {
         "title": "已有账户？",
         "paragraph_html": "<a href=\"{{ link }}\" class=\"link underlined-link\">登录</a>以快速结账。"
-      }
+      },
+      "new_estimated_total": "TODO"
     },
     "footer": {
       "payment": "付款方式"
