--- a/locales/zh-TW.json
+++ b/locales/zh-TW.json
@@ -286,7 +286,8 @@
       "login": {
         "title": "是否有帳號？",
         "paragraph_html": "<a href=\"{{ link }}\" class=\"link underlined-link\">登入</a>以加速結帳。"
-      }
+      },
+      "new_estimated_total": "TODO"
     },
     "footer": {
       "payment": "付款方式"
