--- a/locales/de.json
+++ b/locales/de.json
@@ -286,7 +286,8 @@
       "login": {
         "title": "Hast du ein Konto?",
         "paragraph_html": "<a href=\"{{ link }}\" class=\"link underlined-link\">Logge dich ein</a>, damit es beim Checkout schneller geht."
-      }
+      },
+      "new_estimated_total": "TODO"
     },
     "footer": {
       "payment": "Zahlungsmethoden"
