--- a/locales/id.json
+++ b/locales/id.json
@@ -286,7 +286,8 @@
       "login": {
         "title": "Sudah punya akun?",
         "paragraph_html": "<a href=\"{{ link }}\" class=\"link underlined-link\">Login</a> untuk checkout lebih cepat."
-      }
+      },
+      "new_estimated_total": "TODO"
     },
     "footer": {
       "payment": "Metode pembayaran"
