--- a/locales/ja.json
+++ b/locales/ja.json
@@ -286,7 +286,8 @@
       "login": {
         "title": "アカウントをお持ちですか?",
         "paragraph_html": "<a href=\"{{ link }}\" class=\"link underlined-link\">ログイン</a>することで、チェックアウトがスピーディーに行えます。"
-      }
+      },
+      "new_estimated_total": "TODO"
     },
     "footer": {
       "payment": "決済方法"
